@@ -18,19 +18,8 @@ reahl/dev_dev/domaintests.py
 reahl/dev_dev/xmlreadertests.py
 reahl_dev.egg-info/PKG-INFO
 reahl_dev.egg-info/SOURCES.txt
-reahl_dev.egg-info/SOURCES.txt.~1~
-reahl_dev.egg-info/SOURCES.txt.~2~
-reahl_dev.egg-info/SOURCES.txt.~3~
-reahl_dev.egg-info/SOURCES.txt.~4~
-reahl_dev.egg-info/SOURCES.txt.~5~
-reahl_dev.egg-info/SOURCES.txt.~6~
-reahl_dev.egg-info/SOURCES.txt.~7~
 reahl_dev.egg-info/dependency_links.txt
 reahl_dev.egg-info/entry_points.txt
-reahl_dev.egg-info/entry_points.txt.~1~
-reahl_dev.egg-info/entry_points.txt.~2~
-reahl_dev.egg-info/entry_points.txt.~3~
 reahl_dev.egg-info/namespace_packages.txt
 reahl_dev.egg-info/requires.txt
 reahl_dev.egg-info/top_level.txt
-reahl_dev.egg-info/top_level.txt.~1~
