@@ -1,70 +1,71 @@
 [console_scripts]
 reahl = reahl.dev.devshell:WorkspaceCommandline.execute_one
 
-[reahl.dev.xmlclasses]
-BzrSourceControl = reahl.dev.devdomain:BzrSourceControl
-PythonSourcePackage = reahl.dev.devdomain:PythonSourcePackage
-ChickenProject = reahl.dev.devdomain:ChickenProject
-HardcodedMetadata = reahl.dev.devdomain:HardcodedMetadata
-XMLDependencyList = reahl.dev.devdomain:XMLDependencyList
-SshRepository = reahl.dev.devdomain:SshRepository
-OrderedPersistedClass = reahl.dev.devdomain:OrderedPersistedClass
-DebianPackageSet = reahl.dev.devdomain:DebianPackageSet
-ProjectTag = reahl.dev.devdomain:ProjectTag
-PersistedClassesList = reahl.dev.devdomain:PersistedClassesList
-ThirdpartyDependency = reahl.dev.devdomain:ThirdpartyDependency
-MigrationList = reahl.dev.devdomain:MigrationList
-FileList = reahl.dev.devdomain:FileList
-ShippedFile = reahl.dev.devdomain:ShippedFile
-DebianPackageMetadata = reahl.dev.devdomain:DebianPackageMetadata
-CommandAlias = reahl.dev.devdomain:CommandAlias
-MetaInfo = reahl.dev.devdomain:MetaInfo
-ExcludedPackage = reahl.dev.devdomain:ExcludedPackage
-ExtraPath = reahl.dev.devdomain:ExtraPath
-ConfigurationSpec = reahl.dev.devdomain:ConfigurationSpec
-ScriptExport = reahl.dev.devdomain:ScriptExport
-NamespaceEntry = reahl.dev.devdomain:NamespaceEntry
-TranslationPackage = reahl.dev.devdomain:TranslationPackage
-EntryPointExport = reahl.dev.devdomain:EntryPointExport
-ScheduledJobSpec = reahl.dev.devdomain:ScheduledJobSpec
-Project = reahl.dev.devdomain:Project
-PackageIndex = reahl.dev.devdomain:PackageIndex
-NamespaceList = reahl.dev.devdomain:NamespaceList
-AttachmentList = reahl.dev.devdomain:AttachmentList
-EggProject = reahl.dev.devdomain:EggProject
-ExtrasList = reahl.dev.devdomain:ExtrasList
-Dependency = reahl.dev.devdomain:Dependency
-DebianPackage = reahl.dev.devdomain:DebianPackage
-
-[reahl.dev.commands]
-ClearSelection = reahl.dev.devshell:ClearSelection
-ExplainLegend = reahl.dev.devshell:ExplainLegend
-DebInstall = reahl.dev.devshell:DebInstall
-AddLocale = reahl.dev.devshell:AddLocale
-ServeSMTP = reahl.dev.mailtest:ServeSMTP
-List = reahl.dev.devshell:List
-ExtractMessages = reahl.dev.devshell:ExtractMessages
-ListMissingDependencies = reahl.dev.devshell:ListMissingDependencies
-MergeTranslations = reahl.dev.devshell:MergeTranslations
-SubstVars = reahl.dev.devshell:SubstVars
-Debianise = reahl.dev.devshell:Debianise
-Setup = reahl.dev.devshell:Setup
-DevPiPush = reahl.dev.devshell:DevPiPush
-UpdateAptRepository = reahl.dev.devshell:UpdateAptRepository
-Info = reahl.dev.devshell:Info
-Shell = reahl.dev.devshell:Shell
-MarkReleased = reahl.dev.devshell:MarkReleased
-DeleteSelection = reahl.dev.devshell:DeleteSelection
-CompileTranslations = reahl.dev.devshell:CompileTranslations
-Save = reahl.dev.devshell:Save
-Read = reahl.dev.devshell:Read
-ListSelections = reahl.dev.devshell:ListSelections
-Refresh = reahl.dev.devshell:Refresh
-DevPiTest = reahl.dev.devshell:DevPiTest
-Select = reahl.dev.devshell:Select
-Build = reahl.dev.devshell:Build
-Upload = reahl.dev.devshell:Upload
-
 [reahl.eggs]
 Egg = reahl.component.eggs:ReahlEgg
+
+[reahl.dev.xmlclasses]
+BzrSourceControl = reahl.dev.devdomain:BzrSourceControl
+ShippedFile = reahl.dev.devdomain:ShippedFile
+DebianPackageMetadata = reahl.dev.devdomain:DebianPackageMetadata
+OrderedPersistedClass = reahl.dev.devdomain:OrderedPersistedClass
+HardcodedMetadata = reahl.dev.devdomain:HardcodedMetadata
+FileList = reahl.dev.devdomain:FileList
+ProjectTag = reahl.dev.devdomain:ProjectTag
+Project = reahl.dev.devdomain:Project
+PythonWheelPackage = reahl.dev.devdomain:PythonWheelPackage
+ExtraPath = reahl.dev.devdomain:ExtraPath
+PythonSourcePackage = reahl.dev.devdomain:PythonSourcePackage
+EggProject = reahl.dev.devdomain:EggProject
+MigrationList = reahl.dev.devdomain:MigrationList
+NamespaceEntry = reahl.dev.devdomain:NamespaceEntry
+ChickenProject = reahl.dev.devdomain:ChickenProject
+XMLDependencyList = reahl.dev.devdomain:XMLDependencyList
+PackageIndex = reahl.dev.devdomain:PackageIndex
+TranslationPackage = reahl.dev.devdomain:TranslationPackage
+PersistedClassesList = reahl.dev.devdomain:PersistedClassesList
+DebianPackageSet = reahl.dev.devdomain:DebianPackageSet
+ExtrasList = reahl.dev.devdomain:ExtrasList
+ThirdpartyDependency = reahl.dev.devdomain:ThirdpartyDependency
+ScheduledJobSpec = reahl.dev.devdomain:ScheduledJobSpec
+DebianPackage = reahl.dev.devdomain:DebianPackage
+EntryPointExport = reahl.dev.devdomain:EntryPointExport
+AttachmentList = reahl.dev.devdomain:AttachmentList
+SshRepository = reahl.dev.devdomain:SshRepository
+CommandAlias = reahl.dev.devdomain:CommandAlias
+NamespaceList = reahl.dev.devdomain:NamespaceList
+ScriptExport = reahl.dev.devdomain:ScriptExport
+MetaInfo = reahl.dev.devdomain:MetaInfo
+Dependency = reahl.dev.devdomain:Dependency
+ConfigurationSpec = reahl.dev.devdomain:ConfigurationSpec
+ExcludedPackage = reahl.dev.devdomain:ExcludedPackage
+
+[reahl.dev.commands]
+Debianise = reahl.dev.devshell:Debianise
+MarkReleased = reahl.dev.devshell:MarkReleased
+DeleteSelection = reahl.dev.devshell:DeleteSelection
+ServeSMTP = reahl.dev.mailtest:ServeSMTP
+AddLocale = reahl.dev.devshell:AddLocale
+Read = reahl.dev.devshell:Read
+DevPiTest = reahl.dev.devshell:DevPiTest
+ExplainLegend = reahl.dev.devshell:ExplainLegend
+UpdateAptRepository = reahl.dev.devshell:UpdateAptRepository
+Save = reahl.dev.devshell:Save
+Upload = reahl.dev.devshell:Upload
+DevPiPush = reahl.dev.devshell:DevPiPush
+Setup = reahl.dev.devshell:Setup
+Refresh = reahl.dev.devshell:Refresh
+ClearSelection = reahl.dev.devshell:ClearSelection
+MergeTranslations = reahl.dev.devshell:MergeTranslations
+Shell = reahl.dev.devshell:Shell
+CompileTranslations = reahl.dev.devshell:CompileTranslations
+Info = reahl.dev.devshell:Info
+Select = reahl.dev.devshell:Select
+ListMissingDependencies = reahl.dev.devshell:ListMissingDependencies
+DebInstall = reahl.dev.devshell:DebInstall
+Build = reahl.dev.devshell:Build
+SubstVars = reahl.dev.devshell:SubstVars
+ListSelections = reahl.dev.devshell:ListSelections
+ExtractMessages = reahl.dev.devshell:ExtractMessages
+List = reahl.dev.devshell:List
 
