@@ -1,3 +1,6 @@
 reahl-component>=3.1,<3.2
 reahl-tofu>=3.1,<3.2
 Babel>=1.3,<1.3.9999
+twine>=1.4.0,<1.4.9999
+wheel>=0.24.0,<0.24.9999
+reahl-bzrsupport>=3.1,<3.2
