@@ -9,7 +9,7 @@
   <alias name="unit" command="setup -- nosetests"/>
  
   <!-- packaging -->
-  <distpackage type="sdist">
+  <distpackage type="wheel">
   </distpackage>
 
 </project>
