@@ -53,7 +53,7 @@
 
   <alias name="unit" command="setup -- -q nosetests -s --with-id --nologcapture --tests=reahl/domain_dev -i '.*' -t"/>
   
-  <distpackage type="sdist">
+  <distpackage type="wheel">
     <packageindex repository="devpi"/>
   </distpackage>
     
