@@ -16,7 +16,7 @@
 
   <alias name="unit" command="setup -- -q nosetests"/>
   
-  <distpackage type="sdist">
+  <distpackage type="wheel">
     <packageindex repository="devpi"/>
   </distpackage>
 
