@@ -14,7 +14,7 @@
 
   <alias name="unit" command="setup -- -q nosetests -s --with-id --nologcapture --tests=reahl/stubble_dev -t -i '.*'"/>
   
-  <distpackage type="sdist">
+  <distpackage type="wheel">
     <packageindex repository="devpi"/>
   </distpackage>
 
